# luma.led_matrix

./: .coveragerc  .gitignore  .readthedocs.yml  .travis.yml  CHANGES.rst  CONTRIBUTING.rst  LICENSE.md  LICENSE.rst  MANIFEST.in  README.md  README.rst  requirements.txt  setup.cfg  setup.py  test_segment_mapper.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: main.yml  publish-to-pypi.yml
contrib/sevensegment/: counter.py  sevenSegment.py
doc/: Makefile  api-documentation.rst  conf.py  index.rst  install.rst  intro.rst  notes.rst  python-usage.rst  references.rst  requirements.txt
docs/: 3x 7segment.fzz  Makefile  api-documentation.rst  conf.py  index.rst  install.rst  intro.rst  make.bat  max7219.rst  modules.rst  notes.rst  python-usage.rst
docs/_build/doctrees/: environment.pickle  index.doctree  max7219.doctree  modules.doctree  src.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  max7219.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  (+1 more)
examples/: 7segment_scroll.py  apa102_demo.py  async_7segment_test.py  async_matrix_test.py  box_demo.py  issue_108.py  larson_hue.py  matrix_demo.py  matrix_test.py  neopixel_crawl.py  neopixel_demo.py  neosegment_demo.py  sevensegment_demo.py  sevensegment_test.py  silly_clock.py  test.py  view_message.py
luma/: __init__.py
luma/led_matrix/: __init__.py  const.py  device.py  helpers.py  hub08.py  legacy.py  legacy_fonts.py  segment_mapper.py  virtual.py
max7219/: __init__.py  font.py  led.py  rotate8x8.py
sevensegment/: README.md  demo.py  sevenClock.py
src/: canvas.py  font.py  led.py  spi.c  transitions.py
tests/: baseline_data.py  helpers.py  test_apa102.py  test_legacy.py  test_max7219.py  test_neopixel.py  test_neosegment.py  test_observable.py  test_proportional.py  test_segment_mapper.py  test_sevensegment.py  test_unicornhathd.py  test_ws2812.py
(+8 files in other folders)
