[metadata]
name = luma.led_matrix
version = attr: luma.led_matrix.__version__
description = A library to drive a MAX7219 LED serializer (using SPI) and WS2812 NeoPixels (using DMA)
long_description = file: README.rst, CONTRIBUTING.rst, CHANGES.rst
long_description_content_type = text/x-rst
keywords = raspberry pi, rpi, led, max7219, matrix, seven segment, 7 segment, neopixel, neosegment, ws2812, ws281x, apa102, unicorn-phat, unicorn-hat, unicorn-hat-hd
author = Richard Hull
author_email = richard.hull@destructuring-bind.org
url = https://github.com/rm-hull/luma.led_matrix
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Development Status :: 5 - Production/Stable
    Intended Audience :: Education
    Intended Audience :: Developers
    Topic :: Education
    Topic :: System :: Hardware
    Topic :: System :: Hardware :: Hardware Drivers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
zip_safe = False
packages = find_namespace:
python_requires = >=3.7, <4
install_requires =
    luma.core>=2.4.0
    rpi_ws281x; platform_machine=="armv7l" and platform_system=="Linux"
tests_require =
    pytest
    pytest-cov
    pytest-timeout

[options.packages.find]
include = luma*

[options.extras_require]
docs = sphinx>=1.5.1
qa =
    flake8
    rstcheck
test =
    pytest
    pytest-cov
    pytest-timeout

[bdist_wheel]
universal = 1

[flake8]
ignore = E126, E127, E128, E241, E402, E501, E731, E741
exclude =
    .tox,
    # No need to traverse our git directory
    .git,
    .vscode,
    # There's no value in checking cache directories
    __pycache__,
    doc,
    build,
    dist
